--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.63MB/s(Youtube:不良林), server: 120.233.10.49, port: 39313, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: 120.233.10.49}}
-  - {name: 🇨🇳 中国-341.3KB/s(Youtube:不良林), server: jike-cccn2.jiserver.xyz, port: 39413, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike-cccn2.jiserver.xyz}}
-  - {name: 🇨🇳 中国-455.3KB/s(Youtube:不良林), server: jike1-cccn2.jiserver.xyz, port: 32603, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-cccn2.jiserver.xyz}}
-  - {name: 🇭🇰 香港-909.7KB/s(Youtube:不良林), server: sxdx-nf.jiashumao.net, port: 35401, type: trojan, password: b5b3fa56-b55a-324b-b7e2-678f1fe1bb21, sni: sxdx-nf.jiashumao.net, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-651.8KB/s(Youtube:不良林), server: 183.232.48.148, port: 26054, type: vmess, uuid: 68a8c397-1f27-35c0-818e-ef7f2d360e61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-11.57MB/s(Youtube:不良林), server: jp-zf1.jiashumao.net, port: 29881, type: trojan, password: b5b3fa56-b55a-324b-b7e2-678f1fe1bb21, sni: jp-zf1.jiashumao.net, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.90MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.87MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.69MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.89MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-262.4KB/s(Youtube:不良林), server: 13.125.173.191, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-7.60MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.22MB/s(Youtube:不良林), server: jike1-gzyd.jiserver.xyz, port: 39557, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-gzyd.jiserver.xyz}}
+  - {name: 🇨🇳 中国-1.83MB/s(Youtube:不良林), server: jike-cccn2.jiserver.xyz, port: 39215, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike-cccn2.jiserver.xyz}}
+  - {name: 🇨🇳 中国-422.1KB/s(Youtube:不良林), server: jike-cccn2.jiserver.xyz, port: 38511, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike-cccn2.jiserver.xyz}}
+  - {name: 🇨🇳 中国-4.67MB/s(Youtube:不良林), server: shlt.jiserver.xyz, port: 39403, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: shlt.jiserver.xyz}}
+  - {name: 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.95MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-852.5KB/s(Youtube:不良林), server: jike1-gzyd.jiserver.xyz, port: 38555, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-gzyd.jiserver.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-909.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-651.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.89MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-262.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-852.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-909.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-651.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.89MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-262.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-852.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-909.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-651.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.89MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-262.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-852.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-909.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.57MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-909.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-651.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.89MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-262.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-852.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-909.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-651.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.89MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-262.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-852.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-909.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-651.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.89MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-262.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-852.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-341.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-909.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-651.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.89MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-262.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-852.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
