--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇮🇳 印度-1.89MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-262.4KB/s(Youtube:不良林), server: 13.125.173.191, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇨🇳 中国-7.60MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.22MB/s(Youtube:不良林), server: jike1-gzyd.jiserver.xyz, port: 39557, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-gzyd.jiserver.xyz}}
-  - {name: 🇨🇳 中国-1.83MB/s(Youtube:不良林), server: jike-cccn2.jiserver.xyz, port: 39215, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike-cccn2.jiserver.xyz}}
-  - {name: 🇨🇳 中国-422.1KB/s(Youtube:不良林), server: jike-cccn2.jiserver.xyz, port: 38511, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike-cccn2.jiserver.xyz}}
-  - {name: 🇨🇳 中国-4.67MB/s(Youtube:不良林), server: shlt.jiserver.xyz, port: 39403, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: shlt.jiserver.xyz}}
-  - {name: 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.95MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-852.5KB/s(Youtube:不良林), server: jike1-gzyd.jiserver.xyz, port: 38555, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-gzyd.jiserver.xyz}}
+  - {name: 🇨🇳 中国-437.3KB/s(Youtube:不良林), server: jike-cccn2.jiserver.xyz, port: 39509, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike-cccn2.jiserver.xyz}}
+  - {name: 🇨🇳 中国-485.8KB/s(Youtube:不良林), server: jike1-gzyd.jiserver.xyz, port: 39601, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-gzyd.jiserver.xyz}}
+  - {name: 🇨🇳 中国-5.25MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: 120.233.10.49, port: 39313, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: 120.233.10.49}}
+  - {name: 🇨🇳 中国-9.48MB/s(Youtube:不良林), server: 120.233.10.49, port: 29857, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: 120.233.10.49}}
+  - {name: 🇨🇳 中国-1.55MB/s(Youtube:不良林), server: jike1-cccn2.jiserver.xyz, port: 27805, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-cccn2.jiserver.xyz}}
+  - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: jike-cccn2.jiserver.xyz, port: 39399, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike-cccn2.jiserver.xyz}}
+  - {name: 🇨🇳 中国-11.77MB/s(Youtube:不良林), server: x.mceee.xyz, port: 26011, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.15MB/s(Youtube:不良林), server: jike-gzyd.jiserver.xyz, port: 31861, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike-gzyd.jiserver.xyz}}
+  - {name: 🇨🇳 中国-569.4KB/s(Youtube:不良林), server: jike1-gzyd.jiserver.xyz, port: 39561, type: vmess, uuid: 221828e0-4192-342c-99fc-9a0af6e06823, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /jike1, ws-headers: {Host: jike1-gzyd.jiserver.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-1.89MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-262.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-422.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-852.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-569.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇮🇳 印度-1.89MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-262.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-422.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-852.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-569.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-1.89MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-262.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-422.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-852.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-569.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇮🇳 印度-1.89MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-262.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-422.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-852.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-569.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇮🇳 印度-1.89MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-262.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-422.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-852.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-569.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-1.89MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-262.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-422.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-852.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-569.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-1.89MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-262.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-422.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-852.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-569.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
