--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,31 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
-  - {name: 🇨🇳 中国-7.59MB/s(Youtube:不良林), server: 116.129.253.227, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.24MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.72MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.09MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.87MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-236.3KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1040, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
-  - {name: 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1020.0KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇸🇬 新加坡-350.9KB/s(Youtube:不良林), server: hy.hsichu.xyz, port: 443, type: trojan, password: HsCOkje2HH2PuRFb, sni: hy.hsichu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-668.2KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-350.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-668.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-350.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-668.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-350.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-668.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +40,23 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-350.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-668.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-350.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-668.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-350.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-668.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +72,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-350.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-668.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
